<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>abb_rapid_msgs</name>
  <version>0.5.3</version>
  <description>
    Provides ROS message definitions, representing RAPID data from ABB robot controllers.
  </description>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD-3-Clause</license>
  <author>Jon Tjerngren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>
