<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>abb_rapid_sm_addin_msgs</name>
  <version>0.5.2</version>
  <description>
    Provides ROS message and service definitions, representing interaction
    with ABB robot controllers using the RobotWare StateMachine Add-In.
  </description>
  <maintainer email="jon.tjerngren@se.abb.com">Jon Tjerngren</maintainer>
  <license>BSD-3-Clause</license>
  <author>Jon Tjerngren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>abb_rapid_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
</package>
